--- a/style.css
+++ b/style.css
@@ -7,10 +7,17 @@ body {
     height: 100vh;
 }
 
+#colorContent {
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-weight: 700;
+    position: absolute;
+    top: 90px;
+}
+
 button {
     background-color: deepskyblue;
     padding: 10px 15px;
     border-radius: 15px;
-    width: 150px;
     cursor: pointer;
 }
